fix button alignment

--- a/website/src/pages/cosmos/styles.module.css
+++ b/website/src/pages/cosmos/styles.module.css
@@ -30,3 +30,17 @@
     /* text-decoration: none !important; */
     font-weight: normal;
   }
+
+  /* a {
+    text-decoration: none;
+    color: #ba82ff !important;
+    
+  } */
+  
+ /* a:hover {
+    color: #d1ffeb !important;
+  }
+   */
+/* button {
+    color: #d1ffeb !important;
+  } */
